# simple-news

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Dockerfile  LICENSE  README.md  compose.yaml  deno.json  deploy  deps.ts  dev  dev_imports.json  docker-compose.yml  entrypoint.sh  eslint.config.js  global.ts  import_map.json  import_map_dev.json  import_map_prod.json  lint-staged.config.js  lint-staged.config.mjs  lock.json  mod.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  prod_imports.json  publish  simple-news  svelte.config.js  tsconfig.json  types.ts  util.ts  vite.config.js
cli/: .gitignore  Cargo.toml  feeds.txt  package.json  tsconfig.json
cli/.cargo/: config.toml
cli/src/: article.rs  cache.ts  config.ts  error.rs  feed.rs  group.rs  host.rs  index.ts  main.rs  output.ts  session.rs  table.ts  user.rs  util.rs  util.ts
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  database.db  deps.ts  dev  entrypoint.sh  feed.ts  middleware.ts  mod.ts  opml.ts  package.json  reload.ts  routes.tsx  server.tsx  sessions.ts  tsconfig.json  types.ts  util.ts
server/.cargo/: config.toml
server/.sqlx/: query-0148d22789420e72e9af2b05308896113912a14b6d0fc2d6e7fb4443e5c117e5.json  query-042d2c178b63efcf2846234f53fc988acb9c8f2d300eca4fe6fa1ec84fb8d791.json  query-054a892162da074e9694381b9bda06e4e47352f66f3e1e8fdff7c099da06b247.json  query-05bb15c99b4287bd7c3d77fd536402ea8d4364e3cc32da98bdbb231d8302bfa2.json  query-11a9219aeb8b9e9cebc9d6afdc4db80108d31790c90dd8574e691f219492d740.json  query-1301946cfa5d46fda5fc5d53a5905ec40e81717d2ec8b28385a5439b09023efa.json  query-17062e6bdb337d5016594384b76c95521722660a65dd82dd809c0f95f007859e.json  query-2bb3322ba79c10177f60799529a34d6225aad2634bb7bcb6a0c8a08840d71876.json  query-2f389873c0f883deefcaa0b03446ecb689965348b69ccebfb330dee29ab65138.json  query-33bd8a4bd92926994ffbfcfe6769ad9a3a1855788ff39ee4d6d5f8b4ed6a83dd.json  query-358e2cf92cab757759cda0046eee8fb96d810330bfdef6b5a28cadc46e44480a.json  query-38b410197da07d30004c781341a926d60006d2c8014bfb041b5f2fc4469f45bf.json  query-4c62282cc18373e0e95e92a4e67228ba105077176d96758b8a888d5e079d55fc.json  query-4f956e2c47c5e8f8066ae2a2926ca2bad9e9642e73f3d04b42540e0fd419ecfc.json  query-56189ffd6b9269eb82b47f45207ad5f48574740846e3b879a98a089500bc7e77.json  query-59c4c6dec87a900756576df00b6610522e880161ee8a401f90db9ebbd318d42d.json  query-5cf5458caee5da3a22709b8c26ce7a4cf8c4b25572b530452326675e5a7758ac.json  query-67e3fa34c6eae011f466a55f1226b760a8eef17d5560bf2ea7809419971aefdd.json  query-6e3cb791df44ea9346ed242791f39d0616e0733fb0ac0a356fec1c31994f9889.json  query-7d10ea9843485fc18e28055bd6a640a44a39448df3008c43e0beb3cada35ab9d.json  query-7fa0209a538435d638b5a6554b158ed02d827808a11ae256cf08a4402d9fec8e.json  query-805cbe19b77fa5ecbc51f36bf7c5e85ee51d8d50714e3022f7b96ceb62f705d1.json  query-82beb9976bfd5634b9facb9126e52d03ea92734b957defe373ef6730eb40025a.json  query-85ba401a50568e23cd123982f709e6e994c4edb52e67cf36c974659cb9a999b3.json  query-8c76283e4cc12fcff41470bca1c88488f8e506ac720b20ce24a65924f31da219.json  query-a627858efb25d085d3f4fc5686a1666a17de279c9d0b94606f134eb35bd51197.json  query-a7f6704d08bbc3c9d41a73b9c75388248765fb2f327c2376b866415f67e6e008.json  query-a995ee51fe2bd5985e9fbfe7354e8405d302bf8eee53703aa9e9b2bd53e5baac.json  query-aa20762b063a461e476a1e76838a780521f65a66afae19a9e878078bb66149cb.json  query-b17546c1a6f14598a0b832c626d82edabea546b6c05b6581fb8aa3d9b5531c46.json  query-b9d82462634ea7e0d642a5889e882472f684bc92ca35c1dca2642ed8c19386a4.json  query-bcd1d5692c4017635a4fa556e9c7d101787e02b6c2842c637bb8d85ebd34cc82.json  query-c1d834ad46e564979c6eaeb5f8f5e456598daf2e0ceb4bb4df7722b7295a89f4.json  query-d5efb1408788c39b91b9cbd66df4cdd110088be316f914fbe035e9ba565f2a01.json  query-db887a7de11016821ca04dbd65f73b099c0f00c05787c6726451ae1c2795d593.json  query-e3acfcffa9ff58b8b4744e3f192ffffaf1275543e7e04ee5bfa6789bc5e09d1d.json  query-e5b602eb8393d962f019434a14ac43ff48b689dc205fb6553f0e03ed9b0bf1d2.json  query-e7dac6ae4ec0a285387fbda547cd367ab5a46d79414a77658a1f604219fdc587.json  query-ee4020ae10d64010b1aac44be538781811f512b47b58821e147991382e3c0adb.json  (+5 more)
server/src/: db.rs  (+24 more)
(+409 files in other folders)
