[package]
name = "sn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.6"
colored = "2.0.4"
comfy-table = "7.1.0"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
rpassword = "7.2.0"
serde = "1.0.188"
serde_json = "1.0.107"
simple-news = { path = "../server" }
thiserror = "1.0.49"
time = { version = "0.3.30", features = [
  "serde",
  "formatting",
  "local-offset",
] }
time-tz = { version = "2.0.0", features = ["system"] }
tokio = "1.32.0"
url = "2.4.1"
uuid = "1.4.1"
xdg = "2.5.2"
