[package]
name = "simple-news"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
hex = "0.4.3"
log = "0.4.20"
mime_guess = "2.0.4"
rand = "0.8.5"
rust-embed = { version = "8.0.0", features = ["axum-ex"] }
serde = "1.0.188"
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "time"] }
thiserror = "1.0.49"
time = { version = "0.3.29", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-macros = "0.3.8"
axum-extra = { version = "0.8.0", features = ["cookie"] }
rss = "2.0.6"
reqwest = "0.11.22"
url = { version = "2.4.1", features = ["serde"] }
tsync = "1"
base64 = "0.21.5"
lol_html = "1.2.0"
macros = { path = "macros" }
cuid2 = "0.1.2"
handlebars = "4.4.0"
