[package]
name = "simple-news"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
atom_syndication = "0.12.2"
axum = { version = "0.7.2", features = ["http2", "original-uri"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
axum-login = "0.11.1"
axum-macros = "0.4.0"
base64 = "0.21.5"
cuid2 = "0.1.2"
dotenvy = "0.15"
handlebars = "4.4.0"
hex = "0.4"
log = "0.4"
lol_html = "1.2.0"
macros = { path = "macros" }
mime_guess = "2.0.4"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
] }
rss = "2.0.6"
rust-embed = { version = "8.0.0", features = ["axum-ex"] }
serde = "1.0.188"
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "time"] }
thiserror = "1.0.49"
time = { version = "0.3.29", features = ["serde"] }
time-tz = { version = "2.0.0", features = ["db"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tower-sessions = { version = "0.8.2", features = ["sqlite-store"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tsync = "2"
url = { version = "2.4.1", features = ["serde"] }
